8079784: Unexpected IllegalAccessError when trying access InnerClasses attribute

Prevent classes in the InnerClasses attribute from being loaded unless they are actually being accessed.

Reviewed-by: dholmes, lfoltan